[package]
name = "svisual"
version = "0.2.4"
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
edition = "2018"
description = "Base Rust structures and traits for SVisual client"
repository = "https://github.com/burrbull/svisual-rs"
keywords = ["no-std", "embedded"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
heapless = "0.5.0"
generic-array = "0.13.0"
typenum = "1.10"
