[package]
name = "svisual"
version = "0.3.0"
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
edition = "2018"
description = "Base Rust structures and traits for SVisual client"
repository = "https://github.com/burrbull/svisual-rs"
keywords = ["no-std", "embedded"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
embedded-hal = "0.2.5"
nb = "1.0"
heapless = "0.7"
